--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>apmin</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Joaquín Nieva">
   <link rel="icon" type="image/png" href="./assets/apmin.png">
 </head>
 <body>
